[#1098] Replace IOUtils
* remove remains from Wikitext UI
* remove from target and site